--- a/app/assets/stylesheets/components/_newcard.scss
+++ b/app/assets/stylesheets/components/_newcard.scss
@@ -49,7 +49,6 @@
   text-shadow: none;
   display: inline-flex;
   border-radius: 8px;
-  margin-bottom: 16px;
 }
 
 .card-link-grid {
@@ -60,4 +59,22 @@
 .card-link-grid:hover {
   border-radius: 50%;
   transition: 1s ease;
+}
+
+.card-long-vertical {
+  display: flex;
+  background-size: cover;
+  background-position: center;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  align-items: center;
+  justify-content: center;
+  font-size: 22px;
+  text-shadow: 0 0 10px rgba(0,0,0,0.7);
+  height: 250px;
+  transition: 1s ease;
+  text-shadow: none;
+  display: inline-flex;
+  border-radius: 8px;
+  margin-bottom: 16px;
+  position: relative;
 }
