--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -14,9 +14,6 @@
   height: 1400px;
 }
 
-.title-match {
-  padding-top: 20px;
-}
 
 .delete_match {
   color: #1FE378;
@@ -59,13 +56,12 @@ body {
   color: black;
   background-color: #2CFF8B;
   position: absolute;
-  top: 155px;
-  right: 30px;
-  font-size: 23px;
+  top: 20px;
+  right: 10px;
 }
 
 .price_booking_show {
   position: absolute;
-  top: 297px;
-  right: 30px;
+  bottom: 15px;
+  right: 10px;
 }
