--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -21,12 +21,13 @@
     </div>
   </div>
 </div>-->
-
-  
+<div class="d-flex flex-row-reverse pt-3 pb-0 mb-0 pr-3">
+  <%= link_to 'Create Match', new_match_path, class: "btn button button-match btn-lg list-inline", style: "width: 200px" %>
+</div>
 <div class="container">
-  <div class="title-match text-center">
+  <div class="title-match text-center mt-0 pt-0">
     <h1>Available Matches</h1>
-    <%= link_to 'Create Match', new_match_path, class: "btn button button-match btn-lg list-inline", style: "width: 200px" %>
+    
   </div>
   <div class="cards_games">
     <% @matches = @matches.select{ |match| match.start_time >= DateTime.now } %>
