--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -1,63 +1,58 @@
 <%# <%= link_to 'edit match', edit_match_path, class: "button" %>
 <%# <%= link_to 'back to matches', matches_path, class: "button" %>
 
-<div class="container">
+<div class="container mt-5 mb-5">
 
-  <div class="text-center">
+  <div class="text-center mb-3">
     <% if @match.title != nil %>
       <h1><%= @match.title.capitalize %></h1>
     <% end %>
     
   </div>
-
-  <div id="map-venueshow"
-    style="100%; height: 300px;"
-    data-markers="<%= @marker.to_json %>"
-    data-mapbox-api-key="<%= ENV['MAPBOX_URL'] %>">
-  </div>
-
-  <div class="d-flex justify-content-between mt-3 mb-5">
-    <div>
-      <h2>Match Details</h2>
-      <h3>Time: <%= @match.start_time.strftime(" %e %a %b  %l:%M %p") %></h3>
-      <h3>Players needed: <br>
-      <% @match.spots_left.times do %>
-        <%= image_tag('athlete.png', style:"height: 30px") %>
-      <% end %>
-      <% @match.spots_taken.times do %>
-        <%= image_tag('athlete-negative.png', style:"height: 30px") %>
-      <% end %>
-      </h3>
-      <h3>Skill level: <%= @match.skill_level %></h3>
-      <p><%= @match.description %></p>
-      <% if @match.spots_left > 0 %>
-        <%= link_to 'Book Match', match_bookings_path(@match), method: :post, class: "button", style: "width: 50%"  %>
-      <% end %>
-      <button id="show" class="button-secondary">Contact Host</button>
-      <div class="qrcode d-none">
-        <h2>Scan the QR to Contact the Host</h2>
-        <%= raw @qr.as_html %>
+  <div class="d-flex">
+    
+    <div class="d-flex flex-column justify-content-between mt-3 mb-5 p-2" style="width: 50%; height: 75vh;">
+      <div>
+        <h2>Venue Details</h2>
+        <h3>Name: <%= @match.venue.name.capitalize %></h3>
+        <h3><%= image_tag '005-address.png', style:" height: 42px" %> <%= @match.venue.address_line_1.capitalize %> <%= @match.venue.post_code.upcase %></h3>
+        <h3>Cost: £<%= @match.venue.price %></h3>
+        <h3><%= image_tag '004-pitch.png', style:"height: 50px" %>: <%= @match.venue.surface %></h3>
+        <h3>Lights:
+          <% if @match.venue.floodlit? %>
+            <%= image_tag '001-tick.png', style:"height: 32px" %>
+          <% else %>
+            <%= image_tag '002-remove.png', style:"height: 32px" %>
+          <% end %>
+        </h3>
       </div>
-      
-    </div>
-
-    <div>
-      <h2>Venue Details</h2>
-      <h3>Name: <%= @match.venue.name.capitalize %></h3>
-      <h3><%= image_tag '005-address.png', style:" height: 42px" %> <%= @match.venue.address_line_1.capitalize %> <%= @match.venue.post_code.upcase %></h3>
-      <h3>Cost: £<%= @match.venue.price %></h3>
-      <h3><%= image_tag '004-pitch.png', style:"height: 50px" %>: <%= @match.venue.surface %></h3>
-      <h3>Lights:
-        <% if @match.venue.floodlit? %>
-          <%= image_tag '001-tick.png', style:"height: 32px" %>
-        <% else %>
-          <%= image_tag '002-remove.png', style:"height: 32px" %>
+      <div>
+        <h2>Match Details</h2>
+        <h3>Time: <%= @match.start_time.strftime(" %e %a %b  %l:%M %p") %></h3>
+        <h3>Players needed: <br>
+        <% @match.spots_left.times do %>
+          <%= image_tag('athlete.png', style:"height: 30px") %>
         <% end %>
-      </h3>
+        <% @match.spots_taken.times do %>
+          <%= image_tag('athlete-negative.png', style:"height: 30px") %>
+        <% end %>
+        </h3>
+        <h3>Skill level: <%= @match.skill_level %></h3>
+        <p><%= @match.description %></p>
+        <% if @match.spots_left > 0 %>
+          <%= link_to 'Book Match', match_bookings_path(@match), method: :post, class: "button", style: "width: 50%"  %>
+        <% end %>
+        <button id="show" class="button-secondary">Contact Host</button>
+        <div class="qrcode d-none">
+          <h2>Scan the QR to Contact the Host</h2>
+          <%= raw @qr.as_html %>
+        </div>
+      </div>
+    </div>
+    <div id="map-venueshow"
+      style="width: 50%; height: 75vh; border-radius: 8px"
+      data-markers="<%= @marker.to_json %>"
+      data-mapbox-api-key="<%= ENV['MAPBOX_URL'] %>">
     </div>
   </div>
 </div>
-
-
-
-
