--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -55,9 +55,11 @@ body {
   font-weight: lighter;
   color: black;
   background-color: #2CFF8B;
-  position: absolute;
-  top: 20px;
-  right: 10px;
+  // position: absolute;
+  // top: 20px;
+  // right: 10px;
+  border-radius: 8px;
+  padding: 16px;
 }
 
 .price_booking_show {
