--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -3,7 +3,7 @@
     <div class="col">
       <h1>Checkout summary</h1>
       <p>Purchase of <strong><%= @booking.match.venue.name %></strong> for <strong><%= humanized_money_with_symbol @booking.match.venue.price %></strong></p>
-      <button id="pay" class="btn btn-primary">Pay</button>
+      <button id="pay" class="button" style="width: 100px;">Pay</button>
       <script src="https://js.stripe.com/v3/"></script>
       <script>
         const paymentButton = document.getElementById('pay');
