--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -18,7 +18,7 @@
         <h3>Address:</h3>
         <h5> <%= @venue.address_line_1.capitalize %></h5>
         <h3>City:</h3>
-        <h5> <%= image_tag 'city_icon', style:" height: 42px" %> <%= @venue.city.capitalize %></h5> </h5>
+        <h5> <%= image_tag 'city_icon.png', style:" height: 42px" %> <%= @venue.city.capitalize %></h5> </h5>
         <h3>Post Code:</h3>
         <h5><%= image_tag '005-address.png', style:" height: 42px" %><%= @venue.post_code %></h5>
       </div>
