--- a/app/views/venues/new.html.erb
+++ b/app/views/venues/new.html.erb
@@ -1,8 +1,8 @@
-<div class="container">
-  <div class="container-forms">
+<div class="container mt-5">
+  <div class="container-forms", style="padding-left: 24px">
 
     <%= simple_form_for(@venue) do |v| %>
-      <h2>Venue Registration Form</h2>
+      <h2 style="font-size: 48px">Venue Registration Form</h2>
       <%= v.input :name %>
       <%= v.input :address_line_1 %>
       <%= v.input :address_line_2 %>
