changed some styling for booking confirmation

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,8 +1,8 @@
 <div class="row py-auto" style="min-height: calc(100vh - 25vh);">
     <div class="col-md-2"></div>
     <div class="col text-center">
-      <h1 class="show_match text-center"> Booking confirmation<small></small></h1>
-      <ul class="list-unstyled">
+      <h1 class="show_match text-center"> Booking confirmation</h1>
+      <ul class="list-unstyled" style="margin-top: 5%">
         <% name_of_user = @booking.match.user.email.partition("@").first %>
         <div class="card-long-vertical text-justify">
           <div>
