--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -56,8 +56,8 @@ body {
   color: black;
   background-color: #2CFF8B;
   position: absolute;
-  top: 20px;
-  right: 10px;
+  bottom: 50px;
+  right: 50px;
   border-radius: 8px;
   padding: 16px;
 }
