--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -3,7 +3,7 @@
   <h1 class="text-center"> Your Dashboard</h1>
 
   <div class="container">
-    <h2>Upcoming bookings</h2>
+    <h2 style="font-size: 48px">Upcoming bookings</h2>
 
     <% @booked_matches.each do |booking| %>
       <% name_of_user = booking.match.user.email.partition("@").first %>
@@ -33,7 +33,7 @@
   </div>
 
   <div class="container">
-    <h2>Previous Bookings</h2>
+    <h2 style="font-size: 48px">Previous Bookings</h2>
 
     <% @past_bookings.each do |booking| %>
       <div class="newcard dashboard">
@@ -42,16 +42,18 @@
           <img src="<%= cl_image_path booking.match.venue.photo.key, height: 250, width: 300, crop: :fill, gravity: :auto %>" alt="venue picture" style="border-top-left-radius: 8px; border-bottom-left-radius: 8px;">
         </div>
 
-        <div style="margin-left:48px; margin-right:48px; width: auto;">
+        <div style="margin-left:48px; margin-right:48px; width: 500px; padding-top: 12px">
           <h3 style="font-family:'Bebas Neue', cursive;"><%= booking.match.title %></h3>
 
           <p><%= booking.match.start_time.strftime("%A, %d %b %Y %l:%M%p") %> until <%= booking.match.end_time.strftime("%l:%M%p") %></p>
           <p><%= booking.match.venue.post_code %></p>
-          <p><strong><%= booking.match.no_of_players/2 %> a side game</strong> by <%= name_of_user %></p>
+          <div class= "d-flex justify-content-between">
+            <p><strong><%= booking.match.no_of_players/2 %> a side game</strong> by <%= name_of_user %></p>
+            <p><strong>Total</strong> <%= humanized_money_with_symbol booking.match.venue.price %></p>
+          </div>
           <div class="d-flex flex-row">
             <%= link_to "Leave a review", "#{venue_path(booking)}#review-input", class: "btn button button-match btn-lg list-inline", style: "margin-right: 16px" %>
-            <%= link_to "Booking details", booking_path(booking), class: "btn button button-match btn-lg list-inline", style: "margin-right: 16px" %>
-            <%= link_to "Cancel", booking_path(booking), method: :delete, data: { confirm: "Are you sure?"}, class: "button delete" %>
+            <%= link_to "Booking details", booking_path(booking), class: "btn button button-match btn-lg list-inline" %>
           </div>
         </div>
 
