--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -51,9 +51,10 @@
       data-mapbox-api-key="<%= ENV['MAPBOX_URL'] %>">
     </div>
   </div>
-  <div class="justify-content-center qrcode d-none" style="margin-left: 36%; margin-bottom: 16px">
+  <div class="d-flex align-items-center justify-content-center qrcode d-none" style="margin-bottom: 16px">
     <h2>Scan the QR to Contact the Host</h2>
     <%= raw @qr.as_html %>
+    <a style="" class="text-center" target="_blank" href="https://wa.me/447531816616">or Click Here</a>
   </div>
 </div>
 
