Added some comments for clarity

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,9 @@
     </p>
 </div>-->
 
-
+<!--
+  video background
+-->
 <div class="banner_home background-shadow">
 
   <div class="home-video-wrapper">
@@ -26,7 +28,9 @@
   </div>
 
   <div class="container">
-
+    <!--
+      search form home page passing params for search
+    -->
     <div class="form-search">
       <ul class="list-inline d-flex justify-content-center white-text"> 
         <%= form_tag matches_path, method: :get do %>
